@@ -7663,6 +7663,47 @@ name|ModuleRevisionId
 name|mrid
 parameter_list|)
 block|{
+specifier|final
+name|String
+name|location
+decl_stmt|;
+try|try
+block|{
+name|location
+operator|=
+name|this
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|mrid
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toURL
+argument_list|()
+operator|.
+name|toExternalForm
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MalformedURLException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Failed to determine artifact origin for "
+operator|+
+name|mrid
+argument_list|)
+throw|;
+block|}
 comment|// it's important to say the origin is not local to make sure it won't ever be used for
 comment|// anything else than original token
 return|return
@@ -7680,13 +7721,7 @@ argument_list|)
 argument_list|,
 literal|false
 argument_list|,
-name|getIvyFileInCache
-argument_list|(
-name|mrid
-argument_list|)
-operator|.
-name|getPath
-argument_list|()
+name|location
 argument_list|)
 return|;
 block|}
